--- a/CocktailApp/Api/Module/SearchListCell/SmallCardCell.xib
+++ b/CocktailApp/Api/Module/SearchListCell/SmallCardCell.xib
@@ -20,11 +20,11 @@
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="g1h-UJ-y97">
                         <rect key="frame" x="0.0" y="0.0" width="157" height="225"/>
                     </imageView>
-                    <view alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bQ6-2i-EPR">
-                        <rect key="frame" x="4" y="196" width="149" height="25"/>
+                    <view alpha="0.69999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bQ6-2i-EPR">
+                        <rect key="frame" x="4" y="201" width="149" height="20"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RqD-Xb-6Kb">
-                                <rect key="frame" x="8" y="0.0" width="133" height="17"/>
+                                <rect key="frame" x="0.0" y="0.0" width="149" height="20"/>
                                 <fontDescription key="fontDescription" name="GillSans-Bold" family="Gill Sans" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -33,10 +33,10 @@
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="RqD-Xb-6Kb" firstAttribute="top" secondItem="bQ6-2i-EPR" secondAttribute="top" id="2py-iF-70q"/>
-                            <constraint firstItem="RqD-Xb-6Kb" firstAttribute="leading" secondItem="bQ6-2i-EPR" secondAttribute="leading" constant="8" id="fOv-TY-2rz"/>
-                            <constraint firstAttribute="bottom" secondItem="RqD-Xb-6Kb" secondAttribute="bottom" constant="8" id="wtA-yQ-ad6"/>
-                            <constraint firstAttribute="trailing" secondItem="RqD-Xb-6Kb" secondAttribute="trailing" constant="8" id="xix-kk-jkj"/>
-                            <constraint firstAttribute="height" constant="25" id="zC1-l8-NHc"/>
+                            <constraint firstItem="RqD-Xb-6Kb" firstAttribute="leading" secondItem="bQ6-2i-EPR" secondAttribute="leading" id="fOv-TY-2rz"/>
+                            <constraint firstAttribute="bottom" secondItem="RqD-Xb-6Kb" secondAttribute="bottom" id="wtA-yQ-ad6"/>
+                            <constraint firstAttribute="trailing" secondItem="RqD-Xb-6Kb" secondAttribute="trailing" id="xix-kk-jkj"/>
+                            <constraint firstAttribute="height" constant="20" id="zC1-l8-NHc"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -55,6 +55,7 @@
             <connections>
                 <outlet property="imageView" destination="g1h-UJ-y97" id="h7Y-ik-u3K"/>
                 <outlet property="label" destination="RqD-Xb-6Kb" id="8Iq-sa-6Jf"/>
+                <outlet property="view" destination="bQ6-2i-EPR" id="PTh-vO-odU"/>
             </connections>
             <point key="canvasLocation" x="159.54198473282443" y="-48.239436619718312"/>
         </collectionViewCell>
