--- a/CocktailApp/Api/Module/CategoryCell/CategoryCell.xib
+++ b/CocktailApp/Api/Module/CategoryCell/CategoryCell.xib
@@ -17,7 +17,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="150" height="180"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cocktail" translatesAutoresizingMaskIntoConstraints="NO" id="dyi-ww-FeT">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dyi-ww-FeT">
                         <rect key="frame" x="4" y="4" width="142" height="142"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="dyi-ww-FeT" secondAttribute="height" multiplier="1:1" id="9N8-T2-lAh"/>
@@ -52,7 +52,4 @@
             <point key="canvasLocation" x="-9.1603053435114496" y="-104.22535211267606"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <image name="cocktail" width="512" height="512"/>
-    </resources>
 </document>
