--- a/CocktailApp/Api/Module/ListCell/BigCardCell.xib
+++ b/CocktailApp/Api/Module/ListCell/BigCardCell.xib
@@ -1,21 +1,67 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="BigCardCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="BigCardCell" customModule="CocktailApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="157" height="225"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="157" height="225"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qSw-hC-qGS">
+                        <rect key="frame" x="8" y="8" width="141" height="172.33333333333334"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="qSw-hC-qGS" secondAttribute="height" multiplier="140:171" id="Edf-AZ-P9F"/>
+                        </constraints>
+                    </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3dN-Ko-RYb">
+                        <rect key="frame" x="8" y="188.33333333333334" width="141" height="28.666666666666657"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gnO-Lk-qfj">
+                                <rect key="frame" x="4" y="4" width="133" height="20.666666666666668"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="gnO-Lk-qfj" firstAttribute="top" secondItem="3dN-Ko-RYb" secondAttribute="top" constant="4" id="9nV-u8-1eA"/>
+                            <constraint firstAttribute="trailing" secondItem="gnO-Lk-qfj" secondAttribute="trailing" constant="4" id="9td-F6-0lV"/>
+                            <constraint firstItem="gnO-Lk-qfj" firstAttribute="leading" secondItem="3dN-Ko-RYb" secondAttribute="leading" constant="4" id="TRe-fu-zJb"/>
+                            <constraint firstAttribute="bottom" secondItem="gnO-Lk-qfj" secondAttribute="bottom" constant="4" id="bKr-Yk-igg"/>
+                        </constraints>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="3dN-Ko-RYb" secondAttribute="trailing" constant="8" id="6hb-pH-LZE"/>
+                <constraint firstItem="3dN-Ko-RYb" firstAttribute="top" secondItem="qSw-hC-qGS" secondAttribute="bottom" constant="8" id="B87-nr-aM6"/>
+                <constraint firstItem="qSw-hC-qGS" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="Hdj-PD-l2m"/>
+                <constraint firstItem="3dN-Ko-RYb" firstAttribute="top" secondItem="qSw-hC-qGS" secondAttribute="bottom" constant="8" id="Iqz-Wf-VtS"/>
+                <constraint firstItem="3dN-Ko-RYb" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="deq-jm-jfp"/>
+                <constraint firstAttribute="trailing" secondItem="qSw-hC-qGS" secondAttribute="trailing" constant="8" id="hu4-00-pYe"/>
+                <constraint firstItem="qSw-hC-qGS" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="j6V-C7-aVd"/>
+                <constraint firstAttribute="bottom" secondItem="3dN-Ko-RYb" secondAttribute="bottom" constant="8" id="kVH-1L-G9s"/>
+            </constraints>
+            <size key="customSize" width="157" height="225"/>
+            <point key="canvasLocation" x="205.34351145038167" y="82.042253521126767"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
