--- a/CocktailApp/Base.lproj/Main.storyboard
+++ b/CocktailApp/Base.lproj/Main.storyboard
@@ -57,7 +57,14 @@
                             <constraint firstItem="nvS-Sr-urY" firstAttribute="bottom" secondItem="6NK-L7-Dgt" secondAttribute="bottom" constant="16" id="YCz-R3-pAS"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="SOJ-4b-WwE"/>
+                    <navigationItem key="navigationItem" id="SOJ-4b-WwE">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="rectangle.grid.2x2.fill" catalog="system" id="dlS-7O-bSd">
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="viewStyleButtonTapped:" destination="eSR-d5-q95" id="k4B-zF-qir"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="6NK-L7-Dgt" id="PGJ-hD-Zah"/>
                         <segue destination="BYZ-38-t0r" kind="show" id="4UQ-Io-PC7"/>
@@ -194,6 +201,7 @@
     </scenes>
     <resources>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
+        <image name="rectangle.grid.2x2.fill" catalog="system" width="128" height="97"/>
         <image name="rectangle.split.3x3.fill" catalog="system" width="128" height="93"/>
         <image name="square.split.2x2.fill" catalog="system" width="128" height="114"/>
         <systemColor name="opaqueSeparatorColor">
