--- a/CocktailApp/Api/Module/ListCell/BigCardCell.xib
+++ b/CocktailApp/Api/Module/ListCell/BigCardCell.xib
@@ -18,17 +18,17 @@
                 <rect key="frame" x="0.0" y="0.0" width="157" height="225"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qSw-hC-qGS">
-                        <rect key="frame" x="8" y="8" width="141" height="172.33333333333334"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qSw-hC-qGS">
+                        <rect key="frame" x="6" y="6" width="145" height="177"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="qSw-hC-qGS" secondAttribute="height" multiplier="140:171" id="Edf-AZ-P9F"/>
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3dN-Ko-RYb">
-                        <rect key="frame" x="8" y="188.33333333333334" width="141" height="28.666666666666657"/>
+                        <rect key="frame" x="6" y="187" width="145" height="30"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gnO-Lk-qfj">
-                                <rect key="frame" x="4" y="4" width="133" height="20.666666666666668"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="gnO-Lk-qfj">
+                                <rect key="frame" x="4" y="4" width="137" height="22"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -46,13 +46,13 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="3dN-Ko-RYb" secondAttribute="trailing" constant="8" id="6hb-pH-LZE"/>
-                <constraint firstItem="3dN-Ko-RYb" firstAttribute="top" secondItem="qSw-hC-qGS" secondAttribute="bottom" constant="8" id="B87-nr-aM6"/>
-                <constraint firstItem="qSw-hC-qGS" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="Hdj-PD-l2m"/>
-                <constraint firstItem="3dN-Ko-RYb" firstAttribute="top" secondItem="qSw-hC-qGS" secondAttribute="bottom" constant="8" id="Iqz-Wf-VtS"/>
-                <constraint firstItem="3dN-Ko-RYb" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="deq-jm-jfp"/>
-                <constraint firstAttribute="trailing" secondItem="qSw-hC-qGS" secondAttribute="trailing" constant="8" id="hu4-00-pYe"/>
-                <constraint firstItem="qSw-hC-qGS" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="j6V-C7-aVd"/>
+                <constraint firstAttribute="trailing" secondItem="3dN-Ko-RYb" secondAttribute="trailing" constant="6" id="6hb-pH-LZE"/>
+                <constraint firstItem="3dN-Ko-RYb" firstAttribute="top" secondItem="qSw-hC-qGS" secondAttribute="bottom" constant="4" id="B87-nr-aM6"/>
+                <constraint firstItem="qSw-hC-qGS" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="6" id="Hdj-PD-l2m"/>
+                <constraint firstItem="3dN-Ko-RYb" firstAttribute="top" secondItem="qSw-hC-qGS" secondAttribute="bottom" constant="4" id="Iqz-Wf-VtS"/>
+                <constraint firstItem="3dN-Ko-RYb" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="6" id="deq-jm-jfp"/>
+                <constraint firstAttribute="trailing" secondItem="qSw-hC-qGS" secondAttribute="trailing" constant="6" id="hu4-00-pYe"/>
+                <constraint firstItem="qSw-hC-qGS" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="6" id="j6V-C7-aVd"/>
                 <constraint firstAttribute="bottom" secondItem="3dN-Ko-RYb" secondAttribute="bottom" constant="8" id="kVH-1L-G9s"/>
             </constraints>
             <size key="customSize" width="157" height="225"/>
