--- a/CocktailApp/Base.lproj/Main.storyboard
+++ b/CocktailApp/Base.lproj/Main.storyboard
@@ -112,6 +112,21 @@
             </objects>
             <point key="canvasLocation" x="1664.885496183206" y="-815.49295774647896"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="jOM-dX-kpa">
+            <objects>
+                <viewController id="xeS-nz-eXp" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="aJW-Id-zX1">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="NI0-N6-yCJ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ukx-cc-L1O" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2452" y="-605"/>
+        </scene>
         <!--Search View Controller-->
         <scene sceneID="tCw-wf-Ekm">
             <objects>
