--- a/CocktailApp/Base.lproj/Main.storyboard
+++ b/CocktailApp/Base.lproj/Main.storyboard
@@ -112,20 +112,97 @@
             </objects>
             <point key="canvasLocation" x="1664.885496183206" y="-815.49295774647896"/>
         </scene>
-        <!--View Controller-->
+        <!--Details View Controller-->
         <scene sceneID="jOM-dX-kpa">
             <objects>
-                <viewController id="xeS-nz-eXp" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DetailsViewController" id="xeS-nz-eXp" customClass="DetailsViewController" customModule="CocktailApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="aJW-Id-zX1">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="psZ-SE-Oe1">
+                                <rect key="frame" x="8" y="67" width="377" height="743"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vjq-42-J67">
+                                        <rect key="frame" x="8" y="8" width="190" height="240"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="240" id="JQ9-MB-Pzl"/>
+                                            <constraint firstAttribute="width" constant="190" id="QAl-nV-rVw"/>
+                                        </constraints>
+                                    </imageView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MRP-uU-bBd">
+                                        <rect key="frame" x="206" y="8" width="163" height="240"/>
+                                        <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="240" id="UGP-Pf-eVQ"/>
+                                            <constraint firstAttribute="width" constant="163" id="WkN-NF-flX"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y26-P7-QCt">
+                                        <rect key="frame" x="8" y="256" width="361" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="361" id="J5Y-oW-T4w"/>
+                                            <constraint firstAttribute="height" constant="30" id="yh0-bp-Uh5"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="41s-iw-DNy">
+                                        <rect key="frame" x="8" y="294" width="361" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="2u5-rl-Y5e"/>
+                                            <constraint firstAttribute="width" constant="361" id="DCM-qs-4oz"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zuy-k4-swM">
+                                        <rect key="frame" x="8" y="332" width="361" height="20.333333333333314"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="MRP-uU-bBd" firstAttribute="leading" secondItem="Vjq-42-J67" secondAttribute="trailing" constant="8" symbolic="YES" id="8ga-bU-jat"/>
+                                    <constraint firstItem="Vjq-42-J67" firstAttribute="top" secondItem="psZ-SE-Oe1" secondAttribute="top" constant="8" id="ChF-xw-vX0"/>
+                                    <constraint firstItem="41s-iw-DNy" firstAttribute="top" secondItem="y26-P7-QCt" secondAttribute="bottom" constant="8" symbolic="YES" id="IiN-wn-oFz"/>
+                                    <constraint firstAttribute="trailing" secondItem="41s-iw-DNy" secondAttribute="trailing" constant="8" id="VkU-ey-XLV"/>
+                                    <constraint firstItem="y26-P7-QCt" firstAttribute="top" secondItem="Vjq-42-J67" secondAttribute="bottom" constant="8" symbolic="YES" id="ZY0-9i-H43"/>
+                                    <constraint firstItem="MRP-uU-bBd" firstAttribute="top" secondItem="psZ-SE-Oe1" secondAttribute="top" constant="8" id="Ze3-Sa-IB3"/>
+                                    <constraint firstItem="Zuy-k4-swM" firstAttribute="top" secondItem="41s-iw-DNy" secondAttribute="bottom" constant="8" symbolic="YES" id="b4K-O3-Of9"/>
+                                    <constraint firstItem="y26-P7-QCt" firstAttribute="leading" secondItem="psZ-SE-Oe1" secondAttribute="leading" constant="8" id="c3R-7a-LGX"/>
+                                    <constraint firstItem="Zuy-k4-swM" firstAttribute="leading" secondItem="psZ-SE-Oe1" secondAttribute="leading" constant="8" id="gri-IS-5oN"/>
+                                    <constraint firstAttribute="trailing" secondItem="MRP-uU-bBd" secondAttribute="trailing" constant="8" id="hNw-2g-Y3q"/>
+                                    <constraint firstAttribute="trailing" secondItem="Zuy-k4-swM" secondAttribute="trailing" constant="8" id="m5p-Pc-RlH"/>
+                                    <constraint firstItem="41s-iw-DNy" firstAttribute="leading" secondItem="psZ-SE-Oe1" secondAttribute="leading" constant="8" id="xEy-DR-8HH"/>
+                                    <constraint firstItem="Vjq-42-J67" firstAttribute="leading" secondItem="psZ-SE-Oe1" secondAttribute="leading" constant="8" id="zKS-jF-63U"/>
+                                    <constraint firstAttribute="trailing" secondItem="y26-P7-QCt" secondAttribute="trailing" constant="8" id="zsb-6V-8P0"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="NI0-N6-yCJ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="psZ-SE-Oe1" firstAttribute="leading" secondItem="NI0-N6-yCJ" secondAttribute="leading" constant="8" id="FnH-OD-8OQ"/>
+                            <constraint firstItem="NI0-N6-yCJ" firstAttribute="trailing" secondItem="psZ-SE-Oe1" secondAttribute="trailing" constant="8" id="K7J-r5-It5"/>
+                            <constraint firstItem="NI0-N6-yCJ" firstAttribute="bottom" secondItem="psZ-SE-Oe1" secondAttribute="bottom" constant="8" id="XUw-MY-3Ls"/>
+                            <constraint firstItem="psZ-SE-Oe1" firstAttribute="top" secondItem="NI0-N6-yCJ" secondAttribute="top" constant="8" id="ufo-2h-wI4"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="psZ-SE-Oe1" id="STR-vM-6DB"/>
+                        <outlet property="strIngredient1Label" destination="y26-P7-QCt" id="q30-1Y-8JM"/>
+                        <outlet property="strIngredient2Label" destination="41s-iw-DNy" id="VXf-IF-UOt"/>
+                        <outlet property="strIngredient3" destination="Zuy-k4-swM" id="koR-WH-4L3"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ukx-cc-L1O" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2452" y="-605"/>
+            <point key="canvasLocation" x="2583.969465648855" y="-669.0140845070423"/>
         </scene>
         <!--Search View Controller-->
         <scene sceneID="tCw-wf-Ekm">
@@ -224,6 +301,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
