--- a/CocktailApp/Base.lproj/Main.storyboard
+++ b/CocktailApp/Base.lproj/Main.storyboard
@@ -507,7 +507,9 @@
                         <outlet property="backgroundView" destination="te9-ck-VYG" id="BzP-1h-sIA"/>
                         <outlet property="categoryLabel" destination="vYC-QR-n20" id="NWl-cm-xoR"/>
                         <outlet property="dateLabel" destination="eNx-v5-Zz5" id="fgh-Ow-Hx0"/>
+                        <outlet property="featureView" destination="e36-WQ-uKS" id="162-0N-lUO"/>
                         <outlet property="imageView" destination="CkM-7X-asu" id="9g1-nY-ieo"/>
+                        <outlet property="measureImageView" destination="WnL-tU-8Cx" id="N3D-Cn-aYq"/>
                         <outlet property="measureLabel1" destination="kkN-d7-O7A" id="cAE-bv-Dxz"/>
                         <outlet property="measureLabel2" destination="DO0-nm-UMg" id="Ndw-lV-RQ5"/>
                         <outlet property="measureLabel3" destination="LKH-Ik-0iS" id="Gvy-W1-lFR"/>
@@ -516,6 +518,7 @@
                         <outlet property="measureLabel6" destination="InY-Rx-amN" id="c3w-jz-ecZ"/>
                         <outlet property="measureLabel7" destination="Yyz-Oi-YH5" id="Wz9-M9-FnI"/>
                         <outlet property="nameLabel" destination="3bY-vm-wy6" id="PZb-Pr-17p"/>
+                        <outlet property="ıngredientImageView" destination="UEa-2n-VZ5" id="Ysx-yg-xLD"/>
                         <outlet property="ıngredientLabel1" destination="k9k-AT-5X5" id="8jX-0T-nZd"/>
                         <outlet property="ıngredientLabel2" destination="k9k-AT-5X5" id="GjS-WV-JfI"/>
                         <outlet property="ıngredientLabel3" destination="0We-VD-fcl" id="bqs-cQ-Wpi"/>
@@ -525,6 +528,7 @@
                         <outlet property="ıngredientLabel7" destination="Cpa-Ym-6Me" id="Bbq-z2-ER2"/>
                         <outlet property="ıngredientLabel8" destination="a1I-Ez-BeE" id="wIR-9s-lWv"/>
                         <outlet property="ıngredientLabel9" destination="4kT-Fk-r4V" id="Mrn-Hq-aWr"/>
+                        <outlet property="ıngredientView" destination="Edm-WC-vXN" id="waq-8v-xac"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aVj-aV-wPu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
